[package]
name = "bwterraingen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bwmap = { git = "ssh://git@github.com/zzlk/bwmap.git", default-features = false }

#image = { version = "*", features = ["png", "webp"] }
rand = { version = "*" }
getrandom = { version = "0.2", features = ["js"] }
cached = "*"

instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }

serde = "*"

anyhow = "*"
tracing = "*"

[dev-dependencies]
quickcheck = "*"
quickcheck_macros = "*"
test-log = {version = "*", default-features = false, features = ["trace"]}
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
